--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=G:\Chrome-downloads\flutter_windows_2.2.2-stable\flutter
-FLUTTER_APPLICATION_PATH=D:\Flutter Projects\sayibulmaca\sayibulmaca
+FLUTTER_APPLICATION_PATH=D:\Flutter Projects\sayibulmaca
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
