--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
+flutter_native_splash:
+  color: "#000000"
+  image: "assets/imgs/logo.png"
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -27,7 +31,10 @@ dependencies:
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   provider: ^5.0.0
-
+  easy_localization: ^3.0.0
+  audioplayers: ^0.19.1
+  google_sign_in: ^5.0.7
+  flutter_launcher_icons: ^0.9.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,22 +44,29 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_native_splash: ^1.2.1  
+    
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/imgs/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  assets:
+    - assets/imgs/
+    - assets/sounds/
+    - assets/translations/
+# The following section is specific to Flutter.
+# flutter:
+#   # The following line ensures that the Material Icons font is
+#   # included with your application, so that you can use the icons in
+#   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
-
+#   # To add assets to your application, add an assets section, like this:
+#   assets:
+#     - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
