--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sayibulmaca">
+    package="com.pobol.sayibulmaca">
    <application
-        android:label="sayibulmaca"
+        android:label="Sayi Bulmaca"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
