--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+19
+version: 1.0.0+21
 
 flutter_native_splash:
   color: "#000000"
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.1.2
   intl: ^0.17.0
   onesignal_flutter: ^3.3.0
+  confetti: ^0.7.0
   get:
   get_storage:
   # The following adds the Cupertino Icons font to your application.
